Bug of full height not shown on small divices fixed -> 100vh to 100% in page container height modified

--- a/src/app/modules/curriculum/components/about-me/about-me.component.scss
+++ b/src/app/modules/curriculum/components/about-me/about-me.component.scss
@@ -82,7 +82,7 @@
   }
 
   .profile-description {
-    padding: 2vw 2vw;
+    padding: 5vw 2vw;
     text-align: justify;
     font-size: 3vw;
   }
