--- a/src/app/modules/frontdoor/pages/home-page/home-page.component.scss
+++ b/src/app/modules/frontdoor/pages/home-page/home-page.component.scss
@@ -1,7 +1,8 @@
 .home-container {
   width: 100vw;
-  height: calc(100vh - 48px);
+  height: calc(100% - 48px);
   display: flex;
+  position: fixed;
   align-items: center;
   justify-content: center;
   padding-top: 48px;
